--- a/samples/python/pyproject.toml
+++ b/samples/python/pyproject.toml
@@ -15,6 +15,15 @@ dependencies = [
     "starlette>=0.46.1",
     "typing-extensions>=4.12.2",
     "uvicorn>=0.34.0",
+    "langchain-core>=0.2.0",
+    "langchain-google-genai>=0.1.0",
+    "langchain-openai>=0.1.0",
+    "langgraph>=0.1.0",
+    "python-dotenv>=1.0.0",
+    "asyncclick>=8.1.3",
+    "pyautogen>=0.2.21",
+    "mcp>=0.4.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
